# sisdel

./: .editorconfig  .gitattributes  .gitmodules  CMakeLists.txt  Dockerfile  GitVersion.yml  LICENSE.md  Makefile  README.md  coding_guidelines.rst  config.hh.in  design.md  docker-compose.yml  doxygen.cfg  profile-Windows.txt  profile-macOS.txt  profile.txt  run  sisdel.css  sisdel.dot  sisdel.ebnf  sisdel.md  sisdel_design.odt  sisdel_v2.md  type-hierarchy-graph.dot  type-relation-graph.dot
.github/: .mergify.yml  dependabot.yml
.github/workflows/: build-bin.yml  codeql-analysis.yml
Modules/: FindSphinx.cmake
builder/: Dockerfile  action.yml  conanfile.txt  entrypoint  profile-Linux.txt  profile-Windows.txt  profile-macOS.txt  requirements.txt
doc/: CMakeLists.txt  design_decisions.rst  doxygen.rst  index.rst  sisdel.md  sisdel.rst  sisdel_v2.md  test.sd  types.rst
doc/Modules/: FindSphinx.cmake
doc/templates/: conf.py_t  default.latex
lib/: CMakeLists.txt  config.cc  config.cmake.in  error.cc  file.cc  lib.pc.in  mmap_file.cc  position.cc  sbucket.cc  sisdel.doxygen  token.cc
lib/include/: environment.hh  error.hh  file.hh  hash.hh  mmap_file.hh  parser_elements.hh  position.hh  sbucket.hh  token.hh
parser/: CMakeLists.txt  parser.cc  test_scanner.cc
scripts/: coverage.sh  lcov_collect.sh
src/: CMakeLists.txt  config.cc  environment.hh  error.cc  error.hh  file.cc  file.hh  hash.hh  mmap.cc  mmap.hh  mmap_file.cc  mmap_file.hh  namespace.hh  parser.cc  parser.hh  parser_elements.hh  position.cc  position.hh  sbucket.cc  sbucket.hh  scope.hh  sisdel.doxygen  sisdel_tracepoints.c  sisdel_tracepoints.h  sisdel_tracepoints.tp  status.cc  status.hh  test_scanner.cc  token.cc  token.hh  value.hh
src/include/: mmap_file.hh
src/unit-test/: CMakeLists.txt  check_mmap_file.cc  check_sbucket.cc  check_token.data  unittest.cc
templates/: default.latex
unit-test/: CMakeLists.txt  check_mmap_file.cc  check_mmap_file.data  check_sbucket.cc  check_token.cc  check_token.data
